# kishmat

./: .gitignore  Cargo.toml  License.md  README.md
adaptive_engine/: Cargo.toml
adaptive_engine/src/: lib.rs  position_type.rs
arbiter/: Cargo.toml
arbiter/src/: lib.rs  position_type.rs  strategy.rs
cli/: Cargo.toml
cli/src/: main.rs
comms/: Cargo.toml
comms/src/: lib.rs  protocol.rs  uci.rs  xboard.rs
eval/: Cargo.toml
eval/src/: evaluation.rs  king_safety.rs  lib.rs  material.rs  pawn_structure.rs  psqt.rs
search/: Cargo.toml
search/src/: alpha_beta.rs  iterative.rs  lib.rs  lmr.rs  negamax.rs  null_move.rs  opening_book.rs  polyglot_book.rs  quiescence.rs  search.rs  transposition.rs
src/: commands.rs  interface.rs  main.rs
types/: Cargo.toml
types/src/: bitboard.rs  board.rs  captures.rs  chess_move.rs  fen.rs  lib.rs  move_gen.rs  pgn.rs  piece.rs  position.rs  square.rs  zobrist.rs
types/src/board/: captures.rs  fen.rs  game_state.rs  mod.rs  move_gen.rs  pgn.rs  position.rs  validation.rs  zobrist.rs
ui/: package-lock.json  package.json
ui/src/routes/: +page.svelte
