[package]
name = "kishmat"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "adaptive_engine",
    "types",
    "eval",
    "tests",
    "search",
    "comms"
]
[dependencies]
clap = "4.5.16"
adaptive_engine = { path = "./adaptive_engine" }
comms = { path = "./comms" }
types = { path = "./types" }
search = { path = "./search" }
eval = { path = "./eval" }
